fix spacing in waybar, remove some items

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -79,7 +79,7 @@ window#waybar.chromium {
 #mode,
 #idle_inhibitor,
 #mpd {
-    padding: 0 10px;
+    padding: 0 5px;
     color: #ffffff;
 }
 
